<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
<FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".PersegiPanjangFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <EditText
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@string/panjangpersegi"
                android:ems="10"
                android:id="@+id/et_panjangPersegi" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintVertical_bias="0.10000000"/>
        <EditText
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@string/lebarpersegi"
                android:ems="10"
                android:id="@+id/et_lebarPersegi" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/et_panjangPersegi" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
        <Button
                android:text="@string/hitungpersegi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/b_hitungPersegi" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/et_lebarPersegi" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.07"
                app:layout_constraintVertical_bias="0.060000002"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        <TextView
                android:text="@string/luaspersegi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_luasPersegi" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/b_hitungPersegi" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.09"
                app:layout_constraintVertical_bias="0.0"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:visibility="gone"/>
        <TextView
                android:text="@string/kelilingpersegi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_kelilingPersegi"
                app:layout_constraintTop_toBottomOf="@+id/tv_luasPersegi" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="16dp"
                app:layout_constraintHorizontal_bias="0.09"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintVertical_bias="0.0" android:visibility="gone"/>
        <Button
                android:text="@string/sharepersegi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/b_sharePersegi" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_kelilingPersegi"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0" app:layout_constraintHorizontal_bias="0.07"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
</layout>