<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
<FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".AboutFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <TextView
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tv_name"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintVertical_bias="0.39"/>
        <TextView
                android:text="@string/nim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_nim" android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_name" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintVertical_bias="0.0" android:layout_marginTop="16dp"
        />
        <TextView
                android:text="@string/kelas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_class"
                app:layout_constraintTop_toBottomOf="@+id/tv_nim" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintVertical_bias="0.0" android:layout_marginTop="16dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
</layout>